--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Run linter
         run: mdl -r ~MD033,~MD007,~MD013,~MD022,~MD036,~MD029 content/**/*.md
   bump_version:
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
