--- a/config.yaml
+++ b/config.yaml
@@ -49,6 +49,7 @@ params:
   description: "Site regroupant les ressources théoriques pour préparer le passage du niveau 4 de la fédération française de voile"
   gSearchConsole: "mdCc1B8vLVV2Pra03Jc3C9_e3GEGg8CuxJv2IlHFSwU"
   gAdClient: "ca-pub-1575081840371733"
+  hotjarSiteId: "3437056"
 
   # (Optional, default true) Controls table of contents visibility on right side of pages.
   # Start and end levels can be controlled with markup.tableOfContents setting.
