--- a/config.yaml
+++ b/config.yaml
@@ -50,6 +50,7 @@ params:
   gSearchConsole: "mdCc1B8vLVV2Pra03Jc3C9_e3GEGg8CuxJv2IlHFSwU"
   gAdClient: "ca-pub-1575081840371733"
   hotjarSiteId: "3437056"
+  gTagManager: "GTM-MB545F4"
 
   # (Optional, default true) Controls table of contents visibility on right side of pages.
   # Start and end levels can be controlled with markup.tableOfContents setting.
